--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -2,4 +2,4 @@ steps:
   - name: "Validate"
     commands: 
     - echo "hopefilly this works"
-    - "chmod 440 /Users/gihanahmed/var/lib/buildkite-agent/README.md"
+    - "chmod 777 /Users/gihanahmed/.aws/greenhouse_report.py"
